# riparian_violation_index

./: .env.example  .gitignore  METHODOLOGY.md  README.md  RVI_Kenya_Proposal.md  pyproject.toml
notebooks/: 01_nairobi_pilot.ipynb  03_floodhub_validation.ipynb
src/rvi/: __init__.py  cli.py  config.py  io.py  pipeline.py
src/rvi/analysis/: __init__.py  encroachment.py  rvi.py  validation.py
src/rvi/geometry/: __init__.py  buffer.py  segment.py
src/rvi/ingestion/: __init__.py  admin.py  buildings.py  floodhub.py  osm.py
src/rvi/terrain/: __init__.py  catchments.py
src/rvi/viz/: __init__.py  choropleth.py
tests/: conftest.py  test_analysis_encroachment.py  test_analysis_rvi.py  test_analysis_validation.py  test_cli.py  test_config.py  test_geometry_buffer.py  test_geometry_segment.py  test_ingestion_admin.py  test_ingestion_buildings.py  test_ingestion_floodhub.py  test_ingestion_osm.py  test_io.py  test_pbf_and_geofabrik.py  test_pipeline.py  test_terrain_catchments.py  test_viz_choropleth.py
